--- a/res/layout/item_list_trip_planner.xml
+++ b/res/layout/item_list_trip_planner.xml
@@ -3,10 +3,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:padding="20dp">
 
-    <TextView android:id="@+id/trip_planner_txt_route"
+    <TextView android:id="@+id/trip_planner_txt_description"
               android:layout_width="match_parent"
               android:layout_height="50dp"/>
+
+    <TextView android:id="@+id/trip_planner_txt_duration"
+              android:layout_width="match_parent"
+              android:layout_height="20dp"/>
+
+    <TextView android:id="@+id/trip_planner_txt_distance"
+              android:layout_width="match_parent"
+              android:layout_height="20dp"/>
+
+    <TextView android:id="@+id/trip_planner_txt_start"
+              android:layout_width="match_parent"
+              android:layout_height="20dp"/>
+
+    <TextView android:id="@+id/trip_planner_txt_end"
+              android:layout_width="match_parent"
+              android:layout_height="20dp"/>
 
 </LinearLayout>
