--- a/res/layout/fragment_trip_planner.xml
+++ b/res/layout/fragment_trip_planner.xml
@@ -5,10 +5,31 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+    <EditText android:id="@+id/trip_planner_edit_text_start"
+              android:layout_width="match_parent"
+              android:layout_height="0dp"
+              android:layout_weight="1"
+              android:inputType="text"
+              android:hint="Enter start address"/>
+
+    <EditText android:id="@+id/trip_planner_edit_text_end"
+              android:layout_width="match_parent"
+              android:layout_height="0dp"
+              android:layout_weight="1"
+              android:inputType="text"
+              android:hint="Enter end address"/>
+
+    <Button android:id="@+id/trip_planner_btn"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:hint="Find Directions"/>
+
     <ListView
             android:id="@+id/trip_planner_list_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="9">
     </ListView>
 
 </LinearLayout>
